--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Andrew's Clinic</title>
 </head>
 <body>
-    
+
     <div id="root"></div>
-    <script src="build/bundle.js"></script>
+    <!-- <script src="build/bundle.js"></script> -->
 </body>
 </html>
